--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
         </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
+            <artifactId>htmx-ext-head-support</artifactId>
+            <scope>runtime</scope>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
             <artifactId>alpinejs</artifactId>
             <scope>runtime</scope>
             <version>3.14.3</version>
